[package]
name = "walkingpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.9", features = ["serde"] }
tokio = { version = "1.15.0", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
derive_more = "0.99.17"