[package]
name = "walkingpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.9", features = ["serde"] }
tokio = { version = "1.15.0", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
derive_more = "0.99.17"
structopt = { version = "0.3" }
async-trait = "0.1.52"
futures = "0.3"
signal-hook-tokio = {version = "0.3", features = ["futures-v0_3"]}
signal-hook = "0.3"
warp = "0.3"